# phase2-day5-multi-agent-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: design_template.md
reports/: benchmark_report.md  failure_analysis.md
scripts/: run_benchmark.py
src/multi_agent_research_lab/: cli.py
src/multi_agent_research_lab/agents/: analyst.py  critic.py  researcher.py  supervisor.py  writer.py
src/multi_agent_research_lab/core/: config.py
src/multi_agent_research_lab/evaluation/: benchmark.py  report.py
src/multi_agent_research_lab/graph/: workflow.py
src/multi_agent_research_lab/observability/: tracing.py
src/multi_agent_research_lab/services/: llm_client.py  search_client.py
tests/: test_agents_todo.py
